dfir_rs/tests/compile-fail-stable/surface_syntax_eol_op.rs
../compile-fail/surface_syntax_eol_op.rs